--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 
 
-<div ng-app="" ng-controller="formController">
+<div ng-app="myApp" ng-controller="formCtrl">
   <form novalidate>
     First Name:<br>
     <input type="text" ng-model="user.firstName"><br>
@@ -29,18 +29,19 @@
     <br><br>
     <button ng-click="reset()">RESET</button>
   </form>
-  <p>form = {{user}}</p>
+  <p>form = {{user }}</p>
   <p>master = {{master}}</p>
 </div>
 
 <script>
-function formController ($scope) {
-    $scope.master = {firstName: "John", lastName: "Doe"};
+var app = angular.module('myApp', []);
+app.controller('formCtrl', function($scope) {
+    $scope.master = {firstName:"John", lastName:"Doe"};
     $scope.reset = function() {
         $scope.user = angular.copy($scope.master);
     };
     $scope.reset();
-};
+});
 </script>
 </body>
 </html>
